<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".view.fragment.Account.ForgetPassFragment">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />


    <EditText
        android:id="@+id/email_txt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/viewsHeight"
        android:background="@drawable/ic_text_background"
        android:ems="10"
        android:hint="@string/validate_email"
        android:inputType="textWebEmailAddress|textEmailAddress"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="120dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTxt" />


    <Button
        android:id="@+id/done_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/viewsHeight"
        android:background="@drawable/activate_btn"
        android:text="@string/done"
        android:layout_marginTop="@dimen/ViewsSpacing"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_txt" />


    <TextView
        android:id="@+id/emailTxtDes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:visibility="gone"
        android:text="@string/confirmEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTxt" />

    <Button
        android:id="@+id/open_email_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/viewsHeight"
        android:background="@drawable/ic_btn_background"
        android:text="@string/open_email"
        android:visibility="gone"
        android:layout_marginTop="@dimen/ViewsSpacing"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTxtDes" />


    <RelativeLayout
        android:id="@+id/back_login"
        android:layout_width="150dp"
        android:visibility="gone"
        android:layout_height="@dimen/viewsHeight"
        android:background="@drawable/ic_back_login"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/arrow"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back to login"
            android:layout_toEndOf="@id/arrow"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="14sp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/largeText"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/forgot_password_without_line"
        android:layout_marginTop="@dimen/ViewsSpacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/error_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ViewsSpacing"
        android:text="This email address doesn't exist or not verified"
        android:visibility="gone"
        android:textColor="@color/red"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/email_txt"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>