<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.fragment.Account.ResetPassFragment">
    <TextView
        android:id="@+id/backButton"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:paddingEnd="40dp"
        android:paddingTop="20dp"
        android:paddingStart="5dp"
        android:drawableTop="@drawable/ic_back_arrow"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/reset_pass_txt"
        android:layout_width="0dp"
        android:layout_height="@dimen/viewsHeight"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_btn_background"
        android:text="Reset Now"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <LinearLayout
        android:layout_marginTop="100dp"
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profileMarginStart"
        android:layout_marginEnd="@dimen/profileMarginStart"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/old_pass_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/old_pass_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/ic_text_background"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/ViewsSpacing"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/new_pass_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/ic_text_background"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/ViewsSpacing"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/confirm_pass_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_text_background"
                android:hint="@string/repeat_new_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/error_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text=""
        android:textSize="@dimen/errorTextSize"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2" />

</android.support.constraint.ConstraintLayout>